fix mobile menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,6 +108,9 @@
   /* body {
     @apply bg-background text-foreground font-sans antialiased;
   } */
+   html {
+  scroll-behavior: smooth;
+}
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
